// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot: 0 1`] = `"A (c = 0)"`;

exports[`snapshot: 1 1`] = `"A (c = 0)"`;

exports[`snapshot: 2 1`] = `
"C (c = 20)
..A (c = 0)
..B (c = 10)"
`;

exports[`snapshot: 3 1`] = `"A (c = 0)"`;

exports[`snapshot: 4 1`] = `
"E (c = 40)
..A (c = 0)
..C (c = 20)
....B (c = 10)
..D (c = 30)
....B (c = 10)"
`;

exports[`snapshot: 5 1`] = `
"C (c = 20)
..A (c = 0)
..B (c = 10)"
`;

exports[`snapshot: 6 1`] = `
"E (c = 40)
..A (c = 0)
..C (c = 20)
....B (c = 10)
..D (c = 30)
....B (c = 10)"
`;

exports[`snapshot: 7 1`] = `
"E (c = 40)
..A (c = 0)
..C (c = 20)
....B (c = 10)
..D (c = 30)
....B (c = 10)"
`;

exports[`snapshot: 8 1`] = `
"I (c = 80)
..A (c = 0)
..E (c = 40)
....C (c = 20)
......B (c = 10)
....D (c = 30)
......B (c = 10)
..G (c = 60)
....D (c = 30)
......B (c = 10)
......C (c = 20)
....F (c = 50)
......C (c = 20)
........B (c = 10)
..H (c = 70)
....D (c = 30)
......B (c = 10)
......C (c = 20)
....F (c = 50)
......C (c = 20)
........B (c = 10)"
`;

exports[`snapshot: 9 1`] = `
"E (c = 40)
..A (c = 0)
..C (c = 20)
....B (c = 10)
..D (c = 30)
....B (c = 10)"
`;

exports[`snapshot: 10 1`] = `
"K (c = 100)
..A (c = 0)
..F (c = 50)
....C (c = 20)
......B (c = 10)
....D (c = 30)
......B (c = 10)
....E (c = 40)
..H (c = 70)
....D (c = 30)
......B (c = 10)
......C (c = 20)
....G (c = 60)
......E (c = 40)
........C (c = 20)
..........B (c = 10)
..I (c = 80)
....E (c = 40)
......C (c = 20)
........B (c = 10)
......D (c = 30)
........B (c = 10)
....G (c = 60)
......D (c = 30)
........B (c = 10)
........C (c = 20)
..J (c = 90)
....E (c = 40)
......C (c = 20)
........B (c = 10)
......D (c = 30)
........B (c = 10)
....G (c = 60)
......D (c = 30)
........B (c = 10)
........C (c = 20)"
`;
